--- a/Foda/Foda/page.html
+++ b/Foda/Foda/page.html
@@ -61,8 +61,8 @@
             <div class="col-md-3">
                 <div class="integrante-card p-3 border rounded">
                     <img src="img/perfil4.jpg" alt="Jeremy">
-                    <h5 class="mt-2">Jeremy</h5>
-                    <p>Descripción aquí.</p>
+                    <h5 class="mt-2">Jeremy Simmons</h5>
+                    <p>Compresion y Creatividad.</p>
                 </div>
             </div>
         </div>
