--- a/Foda/Foda/page.html
+++ b/Foda/Foda/page.html
@@ -60,7 +60,7 @@
             </div>
             <div class="col-md-3">
                 <div class="integrante-card p-3 border rounded">
-                    <img src="img/perfil4.jpg" alt="Jeremy">
+                    <img src="img/perfil4.jpg" alt="Jeremy Simmons">
                     <h5 class="mt-2">Jeremy Simmons</h5>
                     <p>Compresion y Creatividad.</p>
                 </div>
